# HocMayATTT

./: .gitignore  CLAUDE.md  README.md  REPO_CONTEXT.md  ddos_detection_fams.ipynb  ddos_detection_fams_executed.ipynb  fams_features.json  main.py  phase1_feature_selection.ipynb  phase2_model_training.ipynb  pyproject.toml  workflow.mmd  workflow_phase1.mmd  workflow_phase2.mmd
diagram/: phase1_updated.excalidraw  phase2_updated.excalidraw  pipeline_overview.excalidraw
reports/Helper/: Dockerfile  README.md  build-slides.sh  build.sh
reports/LaTex/: Main.tex  reference.bib
reports/LaTex/chapters/: 01-tom-tat.tex  02-gioi-thieu.tex  03-cong-trinh-lien-quan.tex  04-phuong-phap.tex  05-thuc-nghiem.tex  06-ket-luan.tex
reports/Slides/: slides.tex
